--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ecstatic": "^3.1.1",
     "hyperlog": "^4.12.1",
     "level": "^2.1.1",
+    "level-browserify": "git+https://github.com/austinfrey/level-browserify.git",
     "level-js": "^2.2.4",
     "routes": "^2.1.0",
     "sheetify": "^7.1.0",
